# esphome_esp-video

./: LICENSE  NOTICE  README.md
components/esp_cam_sensor/: .force_refresh_1765988861  CMakeLists.txt  Kconfig  __init__.py  esp_cam_sensor_camera.cpp  esp_cam_sensor_camera.h  ov02c10_custom_formats.h  ov5647_custom_formats.h  sc202cs_custom_formats.h
components/esp_cam_sensor/sensor/ov02c10/: Kconfig.ov02c10  ov02c10.c
components/esp_cam_sensor/sensor/ov02c10/cfg/: ov02c10_default.json  ov02c10_default_original.json.backup
components/esp_cam_sensor/sensor/ov02c10/private_include/: ov02c10_settings.h
components/esp_cam_sensor/sensor/ov5647/: ov5647.c
components/esp_cam_sensor/sensor/ov5647/include/: ov5647.h
components/esp_cam_sensor/sensor/sc202cs/: sc202cs.c
components/esp_cam_sensor/sensor/sc202cs/cfg/: sc202cs_default.json
components/esp_cam_sensor/sensor/sc202cs/include/private_include/: sc202cs_settings.h
components/esp_cam_sensor/sensor/sc2336/: Kconfig.sc2336
components/esp_cam_sensor/src/: esp_cam_sensor_detect_stubs.c
components/esp_ipa/: CMakeLists.txt
components/esp_ipa/include/: esp_ipa_json_loader.h
components/esp_ipa/src/: esp_ipa_json_loader.c  version.c
components/esp_video/: AUTO_DOWNLOAD_DESIGN.md  CMakeLists.txt  Kconfig  README_AUTO_DOWNLOAD.md  README_USB_UVC.md  __init__.py  esp_video_build.py  esp_video_component.cpp  esp_video_component.h  esp_video_download.py  i2c_helper.h
components/esp_video/exemples/video_custom_format/main/: app_sc2336_custom_settings.h
components/esp_video/include/: esp_video_init.h
components/esp_video/private_include/: esp_video_device_internal.h  esp_video_pipeline_isp.h
components/esp_video/src/: embedded_sc202cs_ipa_config_json.c  embedded_sc2336_ipa_config_json.c  esp_video_init.c  esp_video_isp_pipeline.c
components/esp_video/src/device/: esp_video_csi_device.c  esp_video_usb_uvc_device.c
components/lvgl_camera_display/: CMakeLists.txt  __init__.py  lvgl_camera_display.cpp  lvgl_camera_display.h  mbedtls_aes_stub.c
components/lvgl_camera_display/mbedtls/: aes.h
components/usb_uvc/: CMakeLists.txt  __init__.py  usb_uvc.h  usb_uvc_component.cpp  usb_uvc_component.h  uvc_bulk.c  uvc_control.c  uvc_control.h  uvc_descriptor_parsing.c  uvc_descriptor_printing.c  uvc_descriptors_priv.h  uvc_driver_priv.h  uvc_esp_video.h  uvc_frame.c  uvc_frame_priv.h  uvc_host.c  uvc_host.h  uvc_host_driver.c  uvc_isoc.c  uvc_stream.h  uvc_types_priv.h
components/usb_uvc/esp_private/: uvc_control.h  uvc_esp_video.h  uvc_stream.h
components/usb_uvc/include/esp_private/: uvc_control.h  uvc_esp_video.h  uvc_stream.h
components/usb_uvc/private_include/: uvc_descriptors_priv.h  uvc_driver_priv.h  uvc_frame_priv.h  uvc_types_priv.h
