set(srcs "src/esp_video_buffer.c"
         "src/esp_video_init.c"
         "src/esp_video_ioctl.c"
         "src/esp_video_mman.c"
         "src/esp_video_vfs.c"
         "src/esp_video.c"
         "src/esp_video_cam.c"
         "src/embedded_ov02c10_ipa_config_json.c"
         "src/embedded_ov5647_ipa_config_json.c"
         "src/embedded_sc2336_ipa_config_json.c"
         "src/embedded_sc202cs_ipa_config_json.c")

set(include_dirs "include")
set(priv_include_dirs "private_include")
set(priv_requires "vfs" "spi_flash" "esp_hw_support")
set(requires "esp_driver_cam" "esp_driver_isp" "esp_cam_sensor" "esp_driver_jpeg" "esp_sccb_intf")

if(CONFIG_ESP_VIDEO_ENABLE_MIPI_CSI_VIDEO_DEVICE)
    list(APPEND srcs "src/device/esp_video_csi_device.c")
endif()

if(CONFIG_ESP_VIDEO_ENABLE_DVP_VIDEO_DEVICE)
    list(APPEND srcs "src/device/esp_video_dvp_device.c")
endif()

if(CONFIG_ESP_VIDEO_ENABLE_JPEG_VIDEO_DEVICE)
    list(APPEND srcs "src/device/esp_video_jpeg_device.c")
endif()

if(CONFIG_ESP_VIDEO_ENABLE_ISP)
    list(APPEND srcs "src/device/esp_video_isp_device.c")

    # CRITICAL FIX: Always compile ISP pipeline controller for JSON IPA loading
    # This is safe for all sensors - the code detects sensor type at runtime
    list(APPEND srcs "src/esp_video_isp_pipeline.c")
endif()

if(CONFIG_ESP_VIDEO_ENABLE_USB_UVC_VIDEO_DEVICE)
    list(APPEND srcs "src/device/esp_video_usb_uvc_device.c")
    list(APPEND priv_requires "usb_uvc")
endif()

idf_component_register(SRCS ${srcs}
                       INCLUDE_DIRS ${include_dirs}
                       PRIV_INCLUDE_DIRS ${priv_include_dirs}
                       PRIV_REQUIRES ${priv_requires}
                       REQUIRES ${requires})

# CRITICAL FIX: Always require esp_ipa for JSON IPA loading
# This is safe for all sensors - the code detects sensor type at runtime
idf_component_optional_requires(PRIVATE "esp_ipa")

# Disable the MIPI-CSI driver "backup buffer" allocation.
# The CSI driver normally allocates a full-frame DMA-capable buffer as a
# fallback when no user buffer is queued in time. For larger resolutions
# (e.g. 1920x1080 RGB565 = ~4MB) this alloc fails because the suitable
# heap region is too small or fragmented, and VIDIOC_STREAMON returns
# ESP_ERR_NO_MEM ("no mem for backup buffer"). V4L2 USERPTR with two
# pre-allocated SPIRAM buffers already covers double-buffering, so the
# backup is redundant. Disabling it unblocks 1920x1080 and saves one
# frame worth of internal RAM on every resolution.
target_compile_definitions(${COMPONENT_LIB} PUBLIC
    CONFIG_ESP_VIDEO_DISABLE_MIPI_CSI_DRIVER_BACKUP_BUFFER=1
)


