idf_component_register(
    SRCS
        "uvc_host.c"
        "uvc_host_driver.c"
        "uvc_descriptor_parsing.c"
        "uvc_descriptor_printing.c"
        "uvc_frame.c"
        "uvc_control.c"
        "uvc_isoc.c"
        "uvc_bulk.c"
        "usb_uvc_component.cpp"
    INCLUDE_DIRS
        "include"
    PRIV_INCLUDE_DIRS
        "private_include"
        "include/esp_private"
    REQUIRES
        usb
        esp_video
    PRIV_REQUIRES
        heap
)
